# easyMCU

./: Cargo.toml  build.rs
src/: gui.rs  main.rs  main.rs.back
