[package]
name = "dap_download"
version = "0.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
lto = true

[dependencies]
probe-rs = "0.20.0"
iced = {version ="0.10.0", features = ["image"]}

[build-dependencies]
embed-resource = "2.2"
