[package]
name = "easy_mcu"
version = "0.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
lto = true

[dependencies]
probe-rs = "0.20.0"
iced = {version ="0.10.0", features = ["image"]}
rust-embed="6.8.1"
image = "0.24.7"

[build-dependencies]
embed-resource = "2.2"
